Fix dialogs scrolling off screen

--- a/src/sass/components/_dialog.scss
+++ b/src/sass/components/_dialog.scss
@@ -87,7 +87,7 @@
     }
 
     &:not(&--full) {
-        justify-content: center;
+        justify-content: safe center;
 
         @include themes.themify {
             background-color: rgba(themes.color("scrim"), 0.32);
